--- a/ITSFINALPROJ/careers.html
+++ b/ITSFINALPROJ/careers.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <!--navbars-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">ZoroArk</a>
@@ -20,17 +21,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-
-
-
+   
                     <li class="nav-item">
                         <a class="nav-link" href="homepage.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="plans.html">Plans</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="careers.html">Careers</a>
@@ -44,13 +37,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="addons.html">Addons</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQs</a>
-                    </li>
-
-
-
-                    
+                
                 </ul>
             </div>
         </div>
